[package]
name = "kusage"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "A local, fast CLI that displays Kiro CLI usage metrics with a compact, professional TUI."
license = "MIT"
repository = "https://github.com/praveenc/kusage"
readme = "README.md"
keywords = ["kiro", "usage", "cli", "tui", "metrics"]
categories = ["command-line-utilities"]

[[bin]]
name = "kusage"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.27", features = ["derive"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
time = { version = "0.3.37", features = ["parsing", "formatting", "macros", "local-offset"] }
dirs = "6.0.0"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
